# startup-success-probability

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  hello.py  notebook.ipynb  pyproject.toml  requirements.txt  test.py
src/: main.py  test.py  train.py
src/static/css/: styles.css
src/tailwindcss/: package-lock.json
src/templates/: index.html
